--- a/src/lines/test/styles.css
+++ b/src/lines/test/styles.css
@@ -1,8 +1,5 @@
 :root {
   --size: 300px;
-  --color-dark: #353535;
-  --color-medium: #858585;
-  --color-light: #d3d3d3;
 }
 
 @media (min-width: 600px) {
@@ -36,23 +33,10 @@ body {
 }
 
 .lines {
-  /* --lines-colors: #264653, #2a9d8f, #e9c46a, #f4a261, #e76f51; */
-  /* --lines-colors: #583d72, #9f5f80, #ffba93, #ff8e71; */
-  --lines-colors: #f94144ff, #f3722cff, #f8961eff, #f9844aff, #f9c74fff, #90be6dff, #43aa8bff, #4d908eff, #577590ff, #277da1ff;
-  --lines-widths: 3, 8, 2, 5, 1;
-  --lines-gap: 20;
-  --lines-rotate: 130; /* In degrees */
+  --lines-colors: #f94144, #f3722c, #f8961e, #f9844a, #f9c74f, #90be6d, #43aa8b, #4d908e, #577590, #277da1;
+  --lines-widths: 10, 2, 3, 8;
+  --lines-gaps: 20, 4, 3, 7;
+  --lines-rotate: 0; /* In degrees */
 
   background-image: paint(lines);
-
-  /* animation-name: gap;
-  animation-duration: 4s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite; */
-}
-
-@keyframes gap {
-  0% { --lines-gap: 10 }
-  50% { --lines-gap: 40 }
-  100% { --lines-gap: 10 }
 }
