--- a/src/connections/test/styles.css
+++ b/src/connections/test/styles.css
@@ -36,8 +36,8 @@ body {
 }
 
 .connections {
-  --connections-particleColor: rgb(150,180,200);
-  --connections-lineColor: rgb(150,180,200);
+  --connections-particleColor: #96b4c8;
+  --connections-lineColor: #96b4c8;
   --connections-particleAmount: 200;
   --connections-defaultRadius: 2;
   --connections-variantRadius: 1;
